[package]
name = "bevy-assault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_sprite", "bevy_render", "bevy_core_pipeline", "bevy_asset"] }
bevy_prototype_lyon = "0.9.0"
lyon_tessellation = "1"
lyon_algorithms = "1"
svgtypes = "0.11"

[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = ["x11", "bevy_asset"] }